# ircd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  configure
.circleci/: config.yml
config/: config.h.in
doc/: Configure.help
include/: opercmds.h  patchlist.h  res.h  s_bdd.h  s_bsd.h  s_serv.h  sys.h
ircd/: bsd.c  chkconf.c  ircd.c  list.c  match.c  opercmds.c  res.c  s_auth.c  s_bsd.c  s_debug.c  s_ping.c  s_serv.c  s_user.c  support.c
src/ircd/: aes.c  channel.c  opercmds.c  parse.c  persistent_malloc.c  querycmds.c  runmalloc.c  s_bdd.c  s_bsd.c  s_conf.c  s_debug.c  s_ping.c  s_user.c  send.c  whocmds.c
